test/fail/ajax-template-nested.app
//ajax template only allowed as top-level definition

application test

page root {}

template tasks {
  ajax template moreTasks {}
}
